<?xml version="1.0"?>

<package format="2">
  <name>example_vdb</name>
  <license>Public domain</license>
  <version>0.0.0</version>
  <description>
    VDB Example
  </description>
  <maintainer email="some@email.com">Maintainer</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
